Swagger documentation is ready
