# api/api.go
@@ -1,20 +1,17 @@
 package api
 
 import (
-	"auth_service/api/handler"
-	"database/sql"
-
-	_ "auth_service/api/docs" // Swagger documentation
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
-
-	"github.com/gin-gonic/gin"
+    "auth_service/api/handler"
+    "database/sql"
+    "github.com/gin-gonic/gin"
+    _ "auth_service/api/docs"
+    swaggerFiles "github.com/swaggo/files"
+    ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-// @title ReserveDesk
+// @title ReserveDesk API
 // @version 1.0
-// @description This is a sample server.
-// @termsOfService http://swagger.io/terms/
+// @description ReserveDesk is program to book seats in restaurants order food before arrival.
 
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
@@ -22,19 +19,17 @@ import (
 // @host localhost:8080
 // @BasePath /auth
 
-// NewRouter sets up the router
 func NewRouter(db *sql.DB) *gin.Engine {
-	h := handler.NewHendler(db)
+    h := handler.NewHendler(db)
 
-	router := gin.Default()
+    router := gin.Default()
 
-	// Serve Swagger documentation
-	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+    router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	users := router.Group("/auth")
-	users.POST("/register", h.Register)
-	users.POST("/login", h.Login)
-	users.POST("/logout", h.Logout)
+    users := router.Group("/auth")
+    users.POST("/register", h.Register)
+    users.POST("/login", h.Login)
+    users.POST("/logout", h.Logout)
 
-	return router
+    return router
 }
