# api/handler/auth.go
@@ -1,10 +1,11 @@
 package handler
 
 import (
+	_ "auth_service/api/docs"
 	"auth_service/api/token"
 	"auth_service/models"
+	"database/sql"
 	"net/http"
-	_ "auth_service/api/docs" 
 
 	pb "auth_service/genproto/auth"
 
@@ -13,11 +14,14 @@ import (
 
 // ReserveDesk
 // @Summary Register User
-// @Description Registers user 
+// @Description Registers user
 // @Tags Auth
 // @ID register
+// @Accept json
 // @Produce json
-// @Success 200 {object} map[string]string
+// @Param user body auth.User true "User information to create it"
+// @Success 201
+// @Failure 500 {object} models.Error "Something went wrong in server"
 // @Router /register [post]
 func (h *Hendler) Register(c *gin.Context) {
 	req := &pb.User{}
@@ -30,7 +34,7 @@ func (h *Hendler) Register(c *gin.Context) {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-	c.JSON(http.StatusOK, resp)
+	c.JSON(http.StatusCreated, resp)
 }
 
 // ReserveDesk
@@ -38,8 +42,12 @@ func (h *Hendler) Register(c *gin.Context) {
 // @Description checks the user and returns tokens
 // @Tags Auth
 // @ID login
+// @Accept json
 // @Produce json
-// @Success 200 {object} map[string]string
+// @Param user body models.User true "User Information to log in"
+// @Success 200 {object} auth.Tokens  "Returns access and refresh tokens"
+// @Failure 401 {object} models.Error "if Access token fails it will returns this"
+// @Failure 500 {object} models.Error "Something went wrong in server"
 // @Router /login [post]
 func (h *Hendler) Login(c *gin.Context) {
 	req := &models.User{}
@@ -49,8 +57,13 @@ func (h *Hendler) Login(c *gin.Context) {
 	}
 	resp, err := h.Auth.Login(req)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
+		if err == sql.ErrNoRows {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "user does not exist"})
+			return
+		} else {
+			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+			return
+		}
 	}
 	auth := token.GenerateJWT(resp)
 
@@ -59,20 +72,22 @@ func (h *Hendler) Login(c *gin.Context) {
 
 // ReserveDesk
 // @Summary log outs user
-// @Description removes refresh token
-// @Tags User
+// @Description removes refresh token gets token from header
+// @Tags Auth
 // @ID logout
+// @Accept json
 // @Produce json
-// @Success 200 {object} map[string]string
+// @Success 200 
+// @Failure 500 {object} models.Error "Something went wrong in server"
 // @Router /logout [post]
 func (h *Hendler) Logout(c *gin.Context) {
 	token := c.GetHeader("Authorization")
-	
+
 	if len(token) == 0 {
 		c.JSON(http.StatusBadRequest, gin.H{
 			"error": "token is empty",
 		})
-		return 
+		return
 	}
 
 	err := h.Auth.Logout(&pb.Token{Token: token})
@@ -82,6 +97,3 @@ func (h *Hendler) Logout(c *gin.Context) {
 	}
 	c.JSON(http.StatusOK, nil)
 }
-
-
-
